# CDetectInfer

./: .gitignore  CMakeLists.txt  test_infer.py
include/: FrameInfer.h  InferYaml.h  PreProcess.h  PreProcessYaml.h  ReProcess.h  ReProcessYaml.h  TrtUtils.h  soextern.h  utils.h
samples/: yolov10.yaml
src/: FrameInfer.cpp  PreProcess.cpp  PreProcessYaml.cpp  ReProcess.cpp  ReProcessYaml.cpp  TrtUtils.cpp  Yolov5TrtInfer.cpp  soextern.cpp  test.cpp  utils.cpp  yamltest.cpp  yolov5onnx.cpp
